Report header spacing fix.

--- a/_sass/_report.scss
+++ b/_sass/_report.scss
@@ -99,7 +99,7 @@
         text-align: left;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto 0.8fr;
+        grid-template-rows: auto 0.75fr;
         grid-column-gap: var(--space-2);
         grid-row-gap: 0;
         justify-content: start;
@@ -124,7 +124,6 @@
             order: 4;
             grid-column: 2;
             grid-row: 1/-1;
-            place-self: center stretch;
             @media (min-width: 1px) and (max-width: #{$width-tablet}) {
                 margin-top: var(--space-2);
             }
@@ -164,7 +163,9 @@
         @include responsive('min-width: #{$width-tablet}') {
             grid-column: 4/-1;
         }
-        grid-column: 4/12;
+        @include responsive('min-width: #{$width-desktop}') {
+            grid-column: 4/12;
+        }
         font-family: $font-stack-d;
         font-size: var(--scale-1);
         color: var(--green);
